// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchInput > Key > renders correctly with disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #b5b7bd;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="false"
      data-disabled="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        K
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special   key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="false"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ␣
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Alt key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        Alt
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special ArrowDown key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ↓
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special ArrowLeft key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ←
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special ArrowRight key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        →
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special ArrowUp key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ↑
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Backspace key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ⌫
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special CapsLock key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        Caps
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Control key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        Ctrl
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Delete key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ⌦
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Enter key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ↵
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Escape key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        Esc
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Meta key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ⌘
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > renders correctly without children props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 .emotion-8 {
  border: none;
}

.emotion-3 .emotion-12 {
  padding: 0;
}

.emotion-3 .e7tir8v3 {
  border: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-12 {
  color: #3f4250;
}

.emotion-5>.emotion-12::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-12 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-7[data-size="small"] {
  padding: 0.5rem;
}

.emotion-9 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-9 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls=":re:"
        aria-describedby=":re:"
        class="emotion-0 emotion-1"
        tabindex="0"
      >
        <div
          class="emotion-2 emotion-3 emotion-4"
        >
          <div>
            <div
              class="emotion-5 emotion-6"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-7 emotion-8"
                data-size="large"
              >
                <svg
                  class="emotion-9 emotion-10"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 3.5a5.5 5.5 0 1 0 0 11 5.5 5.5 0 0 0 0-11M2 9a7 7 0 1 1 12.452 4.391l3.328 3.329a.75.75 0 1 1-1.06 1.06l-3.329-3.328A7 7 0 0 1 2 9"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="emotion-11 emotion-12"
                data-size="large"
                id=":rf:"
                placeholder="Type something"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > renders with disabled prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 .emotion-8 {
  border: none;
}

.emotion-3 .emotion-12 {
  padding: 0;
}

.emotion-3 .e7tir8v3 {
  border: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-12 {
  color: #3f4250;
}

.emotion-5>.emotion-12::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-12 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-7[data-size="small"] {
  padding: 0.5rem;
}

.emotion-9 {
  vertical-align: middle;
  fill: #b5b7bd;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-9 .fillStroke {
  stroke: #b5b7bd;
  fill: none;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls=":rh:"
        aria-describedby=":rh:"
        class="emotion-0 emotion-1"
        tabindex="0"
      >
        <div
          class="emotion-2 emotion-3 emotion-4"
        >
          <div>
            <div
              class="emotion-5 emotion-6"
              data-disabled="true"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-7 emotion-8"
                data-size="large"
              >
                <svg
                  class="emotion-9 emotion-10"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 3.5a5.5 5.5 0 1 0 0 11 5.5 5.5 0 0 0 0-11M2 9a7 7 0 1 1 12.452 4.391l3.328 3.329a.75.75 0 1 1-1.06 1.06l-3.329-3.328A7 7 0 0 1 2 9"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="emotion-11 emotion-12"
                data-size="large"
                disabled=""
                id=":ri:"
                placeholder="Type something"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > renders with error prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 .emotion-8 {
  border: none;
}

.emotion-3 .emotion-12 {
  padding: 0;
}

.emotion-3 .e7tir8v3 {
  border: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-12 {
  color: #3f4250;
}

.emotion-5>.emotion-12::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-12 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-7[data-size="small"] {
  padding: 0.5rem;
}

.emotion-9 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-9 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-15 {
  vertical-align: middle;
  fill: #b3144d;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-15 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-17 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls=":rv:"
        aria-describedby=":rv:"
        class="emotion-0 emotion-1"
        tabindex="0"
      >
        <div
          class="emotion-2 emotion-3 emotion-4"
        >
          <div>
            <div
              class="emotion-5 emotion-6"
              data-disabled="false"
              data-error="true"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-7 emotion-8"
                data-size="large"
              >
                <svg
                  class="emotion-9 emotion-10"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 3.5a5.5 5.5 0 1 0 0 11 5.5 5.5 0 0 0 0-11M2 9a7 7 0 1 1 12.452 4.391l3.328 3.329a.75.75 0 1 1-1.06 1.06l-3.329-3.328A7 7 0 0 1 2 9"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <input
                aria-invalid="true"
                class="emotion-11 emotion-12"
                data-size="large"
                id=":r10:"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="emotion-13 emotion-14"
              >
                <svg
                  class="emotion-15 emotion-16"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M18 10a8 8 0 1 1-16 0 8 8 0 0 1 16 0m-8-5a.75.75 0 0 1 .75.75v4.5a.75.75 0 0 1-1.5 0v-4.5A.75.75 0 0 1 10 5m0 10a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="emotion-17 emotion-18"
          >
            there is an error
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > renders with shortcut prop > as array of string 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 .emotion-8 {
  border: none;
}

.emotion-3 .emotion-12 {
  padding: 0;
}

.emotion-3 .emotion-14 {
  border: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-12 {
  color: #3f4250;
}

.emotion-5>.emotion-12::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-12 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-7[data-size="small"] {
  padding: 0.5rem;
}

.emotion-9 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-9 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-17 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-17[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-19 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls=":rp:"
        aria-describedby=":rp:"
        class="emotion-0 emotion-1"
        tabindex="0"
      >
        <div
          class="emotion-2 emotion-3 emotion-4"
        >
          <div>
            <div
              class="emotion-5 emotion-6"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-7 emotion-8"
                data-size="large"
              >
                <svg
                  class="emotion-9 emotion-10"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 3.5a5.5 5.5 0 1 0 0 11 5.5 5.5 0 0 0 0-11M2 9a7 7 0 1 1 12.452 4.391l3.328 3.329a.75.75 0 1 1-1.06 1.06l-3.329-3.328A7 7 0 0 1 2 9"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="emotion-11 emotion-12"
                data-size="large"
                id=":rq:"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="emotion-13 emotion-14"
              >
                <div
                  class="emotion-15 emotion-4"
                >
                  <div
                    class="emotion-17 emotion-18"
                    data-children-length="true"
                  >
                    <span
                      class="emotion-19 emotion-20"
                    >
                      Ctrl
                    </span>
                  </div>
                  <div
                    class="emotion-17 emotion-18"
                    data-children-length="true"
                  >
                    <span
                      class="emotion-19 emotion-20"
                    >
                      Shift
                    </span>
                  </div>
                  <div
                    class="emotion-17 emotion-18"
                    data-children-length="false"
                  >
                    <span
                      class="emotion-19 emotion-20"
                    >
                      A
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > renders with shortcut prop > as boolean 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 .emotion-8 {
  border: none;
}

.emotion-3 .emotion-12 {
  padding: 0;
}

.emotion-3 .emotion-14 {
  border: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-12 {
  color: #3f4250;
}

.emotion-5>.emotion-12::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-12::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-12 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-12::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-7[data-size="small"] {
  padding: 0.5rem;
}

.emotion-9 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-9 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-17 {
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-17[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-19 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls=":rk:"
        aria-describedby=":rk:"
        class="emotion-0 emotion-1"
        tabindex="0"
      >
        <div
          class="emotion-2 emotion-3 emotion-4"
        >
          <div>
            <div
              class="emotion-5 emotion-6"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-7 emotion-8"
                data-size="large"
              >
                <svg
                  class="emotion-9 emotion-10"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 3.5a5.5 5.5 0 1 0 0 11 5.5 5.5 0 0 0 0-11M2 9a7 7 0 1 1 12.452 4.391l3.328 3.329a.75.75 0 1 1-1.06 1.06l-3.329-3.328A7 7 0 0 1 2 9"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="emotion-11 emotion-12"
                data-size="large"
                id=":rl:"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="emotion-13 emotion-14"
              >
                <div
                  class="emotion-15 emotion-4"
                >
                  <div
                    class="emotion-17 emotion-18"
                    data-children-length="true"
                  >
                    <span
                      class="emotion-19 emotion-20"
                    >
                      Ctrl
                    </span>
                  </div>
                  <div
                    class="emotion-17 emotion-18"
                    data-children-length="false"
                  >
                    <span
                      class="emotion-19 emotion-20"
                    >
                      K
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
